# AnimeList

./: CMakeLists.txt  README.md  main.cpp
src/: Button.cpp  Button.h  InputField.cpp  InputField.h  ListItem.cpp  ListItem.h  common.h
